canvas back in app again. still cant regen ohms

--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,6 @@
     <title>PHASEREACTOR</title>
   </head>
   <body>
-    <div id="root"><section><section id="phaser-game">this is my phaser game</section></section></div>
+    <div id="root"></div>
   </body>
 </html>
-
-<!-- <body style="overflow: hidden;">
-  <noscript>
-    You need to enable JavaScript to run this app.
-  </noscript>
-  <div id="root"><section><section id="phaser-target">hello there old friend</section></section></div>
-
-<script type="text/javascript" src="/static/js/bundle.js"></script>
-
-<canvas width="1024" height="768"></canvas></body> -->
